--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,6 +36,7 @@
 			app:layout_constraintBottom_toBottomOf="parent">
 
 			<androidx.appcompat.widget.AppCompatTextView
+				android:id="@+id/btn_history"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				android:layout_gravity="center"
@@ -66,6 +67,7 @@
 
 
 			<androidx.appcompat.widget.AppCompatTextView
+				android:id="@+id/btn_mypage"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				android:layout_gravity="center"
