--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+	<color name="colorprimary">#000</color>
+	<color name="colorSurface">#000</color>
+	<color name="colorPrimaryContainer">#FFBB86FC</color>
 	<color name="purple_200">#FFBB86FC</color>
 	<color name="purple_500">#FF6200EE</color>
 	<color name="purple_700">#FF3700B3</color>
@@ -18,11 +21,13 @@
 	<color name="gray200">#AAAAAA</color>
 	<color name="gray500">#777777</color>
 	<color name="gray600">#444</color>
-	<color name="gray700">#333</color>
+	<color name="gray700">#333333</color>
 	<color name="gray800">#272727</color>
 	<color name="gray850">#171717</color>
 	<color name="gray900">#0F0F0F</color>
 	<color name="black">#FF000000</color>
+
+	<color name="card">#292C2D</color>
 </resources>
 
 
