--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -57,7 +57,7 @@
 		<item name="android:layout_width">16dp</item>
 		<item name="android:layout_height">16dp</item>
 		<item name="android:layout_margin">8dp</item>
-		<item name="android:src">"@drawable/ic_checkbox_off"</item>
+		<item name="android:src">@drawable/ic_checkbox_off</item>
 	</style>
 
 	<style name="JoinStyleText" parent="Widget.AppCompat.TextView">
