--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -29,9 +29,15 @@
 				android:layout_height="60dp">
 
 				<androidx.appcompat.widget.AppCompatTextView
-					style="@style/Title"
+					android:id="@+id/btn_location"
+					style="@style/Typography.Regular"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
 					android:layout_marginStart="20dp"
-					android:text="서울시 강남구 y"
+					android:drawableEnd="@drawable/ic_down"
+					android:text="Gangnam-gu, Seoul 1km"
+					android:textColor="@color/white"
+					android:textSize="16dp"
 					app:layout_constraintBottom_toBottomOf="parent"
 					app:layout_constraintStart_toStartOf="parent"
 					app:layout_constraintTop_toTopOf="parent" />
@@ -49,25 +55,68 @@
 					app:layout_constraintTop_toTopOf="parent" />
 			</androidx.constraintlayout.widget.ConstraintLayout>
 
-			<androidx.appcompat.widget.AppCompatTextView
-				android:id="@+id/btnAr"
+			<androidx.appcompat.widget.LinearLayoutCompat
 				android:layout_width="match_parent"
-				android:layout_height="200dp"
+				android:layout_height="274dp"
+				android:layout_marginStart="20dp"
+				android:layout_marginEnd="20dp"
+				android:background="@color/gray800"
+				android:orientation="vertical">
+
+				<ImageView
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_gravity="center"
+					android:layout_marginTop="36dp"
+					android:background="@drawable/ic_home_circle_btn"
+					android:gravity="center"
+					android:padding="16dp"
+					android:src="@drawable/ic_home_ar_btn" />
+
+				<androidx.appcompat.widget.AppCompatTextView
+					style="@style/Typography.Bold"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_gravity="center"
+					android:layout_marginTop="20dp"
+					android:clickable="true"
+					android:gravity="center"
+					android:text="@string/find_a_place_naround_me_now"
+					android:textColor="@color/white"
+					android:textSize="20dp" />
+
+				<androidx.appcompat.widget.AppCompatTextView
+					style="@style/Typography.Bold"
+					android:layout_width="match_parent"
+					android:layout_height="56dp"
+					android:layout_gravity="center"
+					android:layout_marginStart="20dp"
+					android:layout_marginTop="34dp"
+					android:layout_marginEnd="20dp"
+					android:layout_marginBottom="24dp"
+					android:background="@drawable/bg_gradient"
+					android:clickable="true"
+					android:gravity="center"
+					android:onClick="@{() -> viewModel.setViewFlow(ViewFlow.AR)}"
+					android:text="GO!"
+					android:textColor="@color/black"
+					android:textSize="18dp" />
+
+			</androidx.appcompat.widget.LinearLayoutCompat>
+
+			<androidx.appcompat.widget.AppCompatTextView
+				style="@style/TitleBold"
 				android:layout_margin="20dp"
-				android:clickable="true"
-				android:onClick="@{() -> viewModel.setViewFlow(ViewFlow.AR)}"
-				android:background="@color/gray700"
-				android:gravity="center"
-				android:text="GoAR"
-				android:textSize="34dp" />
+				android:gravity="start"
+				android:text="What kind of place do you want to go?" />
 
 			<androidx.appcompat.widget.LinearLayoutCompat
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
-				android:layout_margin="20dp"
-				android:background="@color/gray800"
-				android:orientation="vertical"
-				android:padding="7dp">
+				android:layout_marginStart="16dp"
+				android:layout_marginEnd="16dp"
+				android:layout_marginBottom="20dp"
+				android:orientation="vertical">
 
 				<androidx.appcompat.widget.LinearLayoutCompat
 					android:layout_width="match_parent"
@@ -75,40 +124,88 @@
 					android:orientation="horizontal"
 					android:weightSum="3">
 
-
-					<androidx.appcompat.widget.AppCompatTextView
-						android:layout_width="88dp"
-						android:layout_height="66dp"
-						android:layout_margin="7dp"
+					<androidx.appcompat.widget.LinearLayoutCompat
+						android:id="@+id/btn_cafe"
+						android:layout_width="match_parent"
+						android:layout_height="wrap_content"
+						android:layout_margin="4dp"
 						android:layout_weight="1"
 						android:background="@color/card"
-						android:gravity="center"
-						android:text="@string/cafe"
-						android:textColor="@color/white"
-						android:textSize="12dp" />
+						android:orientation="vertical"
+						android:padding="12dp">
 
-					<androidx.appcompat.widget.AppCompatTextView
-						android:layout_width="88dp"
-						android:layout_height="66dp"
-						android:layout_margin="7dp"
+						<ImageView
+							android:layout_width="wrap_content"
+							android:layout_height="wrap_content"
+							android:layout_gravity="center"
+							android:src="@drawable/ic_name_cafe" />
+
+						<androidx.appcompat.widget.AppCompatTextView
+							android:layout_width="wrap_content"
+							android:layout_height="wrap_content"
+							android:layout_gravity="center"
+							android:layout_marginTop="6dp"
+							android:gravity="center"
+							android:text="@string/cafe"
+							android:textColor="@color/white"
+							android:textSize="12dp" />
+					</androidx.appcompat.widget.LinearLayoutCompat>
+
+					<androidx.appcompat.widget.LinearLayoutCompat
+						android:id="@+id/btn_restaurant"
+						android:layout_width="match_parent"
+						android:layout_height="wrap_content"
+						android:layout_margin="4dp"
 						android:layout_weight="1"
 						android:background="@color/card"
-						android:gravity="center"
-						android:onClick="@{() -> viewModel.setViewFlow(ViewFlow.AR)}"
-						android:text="@string/cafe"
-						android:textColor="@color/white"
-						android:textSize="12dp" />
+						android:orientation="vertical"
+						android:padding="12dp">
 
-					<androidx.appcompat.widget.AppCompatTextView
-						android:layout_width="88dp"
-						android:layout_height="66dp"
-						android:layout_margin="7dp"
+						<ImageView
+							android:layout_width="wrap_content"
+							android:layout_height="wrap_content"
+							android:layout_gravity="center"
+							android:src="@drawable/ic_name_restaurant" />
+
+						<androidx.appcompat.widget.AppCompatTextView
+							android:layout_width="wrap_content"
+							android:layout_height="wrap_content"
+							android:layout_gravity="center"
+							android:layout_marginTop="6dp"
+							android:gravity="center"
+							android:text="@string/restaurant"
+							android:textColor="@color/white"
+							android:textSize="12dp" />
+					</androidx.appcompat.widget.LinearLayoutCompat>
+
+					<androidx.appcompat.widget.LinearLayoutCompat
+						android:id="@+id/btn_bar"
+						android:layout_width="match_parent"
+						android:layout_height="wrap_content"
+						android:layout_margin="4dp"
 						android:layout_weight="1"
 						android:background="@color/card"
-						android:gravity="center"
-						android:text="@string/cafe"
-						android:textColor="@color/white"
-						android:textSize="12dp" />
+						android:orientation="vertical"
+						android:padding="12dp">
+
+						<ImageView
+							android:layout_width="wrap_content"
+							android:layout_height="wrap_content"
+							android:layout_gravity="center"
+							android:src="@drawable/ic_name_bar" />
+
+						<androidx.appcompat.widget.AppCompatTextView
+							android:layout_width="wrap_content"
+							android:layout_height="wrap_content"
+							android:layout_gravity="center"
+							android:layout_marginTop="6dp"
+							android:gravity="center"
+							android:text="@string/bar"
+							android:textColor="@color/white"
+							android:textSize="12dp" />
+					</androidx.appcompat.widget.LinearLayoutCompat>
+
+
 				</androidx.appcompat.widget.LinearLayoutCompat>
 
 				<androidx.appcompat.widget.LinearLayoutCompat
@@ -117,48 +214,98 @@
 					android:orientation="horizontal"
 					android:weightSum="3">
 
-
-					<androidx.appcompat.widget.AppCompatTextView
-						android:layout_width="88dp"
-						android:layout_height="66dp"
-						android:layout_margin="7dp"
+					<androidx.appcompat.widget.LinearLayoutCompat
+						android:id="@+id/btn_shopping"
+						android:layout_width="match_parent"
+						android:layout_height="wrap_content"
+						android:layout_margin="4dp"
 						android:layout_weight="1"
 						android:background="@color/card"
-						android:gravity="center"
-						android:text="@string/cafe"
-						android:textColor="@color/white"
-						android:textSize="12dp" />
+						android:orientation="vertical"
+						android:padding="12dp">
 
-					<androidx.appcompat.widget.AppCompatTextView
-						android:layout_width="88dp"
-						android:layout_height="66dp"
-						android:layout_margin="7dp"
+						<ImageView
+							android:layout_width="wrap_content"
+							android:layout_height="wrap_content"
+							android:layout_gravity="center"
+							android:src="@drawable/ic_name_shopping" />
+
+						<androidx.appcompat.widget.AppCompatTextView
+							android:layout_width="wrap_content"
+							android:layout_height="wrap_content"
+							android:layout_gravity="center"
+							android:layout_marginTop="6dp"
+							android:gravity="center"
+							android:text="@string/shopping"
+							android:textColor="@color/white"
+							android:textSize="12dp" />
+					</androidx.appcompat.widget.LinearLayoutCompat>
+
+					<androidx.appcompat.widget.LinearLayoutCompat
+						android:id="@+id/btn_cultural_life"
+						android:layout_width="match_parent"
+						android:layout_height="wrap_content"
+						android:layout_margin="4dp"
 						android:layout_weight="1"
 						android:background="@color/card"
-						android:gravity="center"
-						android:text="@string/cafe"
-						android:textColor="@color/white"
-						android:textSize="12dp" />
+						android:orientation="vertical"
+						android:paddingTop="12dp"
+						android:paddingBottom="12dp">
 
-					<androidx.appcompat.widget.AppCompatTextView
-						android:layout_width="88dp"
-						android:layout_height="66dp"
-						android:layout_margin="7dp"
+						<ImageView
+							android:layout_width="wrap_content"
+							android:layout_height="wrap_content"
+							android:layout_gravity="center"
+							android:src="@drawable/ic_name_cafe" />
+
+						<androidx.appcompat.widget.AppCompatTextView
+							android:layout_width="wrap_content"
+							android:layout_height="wrap_content"
+							android:layout_gravity="center"
+							android:layout_marginTop="6dp"
+							android:gravity="center"
+							android:text="@string/cultural_life"
+							android:textColor="@color/white"
+							android:textSize="12dp" />
+					</androidx.appcompat.widget.LinearLayoutCompat>
+
+					<androidx.appcompat.widget.LinearLayoutCompat
+						android:id="@+id/btn_fitness"
+						android:layout_width="match_parent"
+						android:layout_height="wrap_content"
+						android:layout_margin="4dp"
 						android:layout_weight="1"
 						android:background="@color/card"
-						android:gravity="center"
-						android:text="@string/cafe"
-						android:textColor="@color/white"
-						android:textSize="12dp" />
+						android:orientation="vertical"
+						android:padding="12dp">
+
+						<ImageView
+							android:layout_width="wrap_content"
+							android:layout_height="wrap_content"
+							android:layout_gravity="center"
+							android:src="@drawable/ic_name_fitness" />
+
+						<androidx.appcompat.widget.AppCompatTextView
+							android:layout_width="wrap_content"
+							android:layout_height="wrap_content"
+							android:layout_gravity="center"
+							android:layout_marginTop="6dp"
+							android:gravity="center"
+							android:text="@string/fitness"
+							android:textColor="@color/white"
+							android:textSize="12dp" />
+					</androidx.appcompat.widget.LinearLayoutCompat>
+
+
 				</androidx.appcompat.widget.LinearLayoutCompat>
+
 			</androidx.appcompat.widget.LinearLayoutCompat>
 
-
 			<androidx.appcompat.widget.AppCompatTextView
-				style="@style/Title"
-				android:layout_marginStart="24dp"
-				android:text="지금 우리 동네는?" />
-
+				style="@style/TitleBold"
+				android:layout_margin="20dp"
+				android:gravity="start"
+				android:text="What about my neighborhood?" />
 
 			<GridLayout
 				android:layout_width="match_parent"
