--- a/app/src/main/res/layout/fragment_transaction.xml
+++ b/app/src/main/res/layout/fragment_transaction.xml
@@ -3,57 +3,101 @@
 
 	<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
 		xmlns:app="http://schemas.android.com/apk/res-auto"
-		xmlns:tools="http://schemas.android.com/tools"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent">
+
 
 		<LinearLayout
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:layout_gravity="center"
+			android:background="@color/gray900"
 			android:orientation="vertical">
 
-			<androidx.cardview.widget.CardView
-				android:id="@+id/remitente_email_cv"
+			<androidx.appcompat.widget.LinearLayoutCompat
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				android:layout_marginStart="20dp"
+				android:layout_marginTop="72dp"
+				android:layout_marginEnd="20dp"
+				android:padding="20dp"
+				android:background="@drawable/box_default_round20"
+				android:orientation="vertical">
+
+				<androidx.appcompat.widget.AppCompatTextView
+					android:id="@+id/tv_near"
+					style="@style/Typography.Bold"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_gravity="center"
+					android:clickable="true"
+					android:gravity="center"
+					android:text="222 NEAR"
+					android:textColor="@color/white"
+					android:textSize="24dp" />
+
+				<androidx.appcompat.widget.AppCompatTextView
+					android:id="@+id/tv_usd"
+					style="@style/Typography.Medium"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_gravity="center"
+					android:layout_marginTop="12dp"
+					android:gravity="center"
+					android:text="222usd"
+					android:textColor="@color/white"
+					android:textSize="13dp" />
+
+
+			</androidx.appcompat.widget.LinearLayoutCompat>
+
+
+			<LinearLayout
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:layout_gravity="center"
+				android:gravity="center"
+				android:orientation="vertical">
+
+				<TextView
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:text="Service response:"
+					android:textColor="@color/white" />
+
+				<TextView
+					android:id="@+id/serviceReponseTv"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:textColor="@color/white"
+					android:layout_margin="5dp" />
+
+			</LinearLayout>
+
+			<androidx.cardview.widget.CardView
+				android:id="@+id/acctount_btn_cv"
+				android:layout_width="match_parent"
+				android:layout_height="50dp"
+				android:layout_marginStart="20dp"
 				android:layout_marginTop="20dp"
 				android:layout_marginEnd="20dp"
+				android:layout_marginBottom="20dp"
 				android:clickable="true"
 				android:focusable="true"
 				android:foreground="?android:attr/selectableItemBackground"
+				app:cardBackgroundColor="@color/purple_500"
 				app:cardCornerRadius="10dp"
-				app:cardElevation="5dp"
-				app:layout_constraintBottom_toBottomOf="parent"
-				app:layout_constraintEnd_toEndOf="parent"
-				app:layout_constraintStart_toStartOf="parent"
-				app:layout_constraintTop_toTopOf="parent"
-				tools:layout_editor_absoluteX="20dp">
+				app:cardElevation="5dp">
 
-				<LinearLayout
-					android:layout_width="match_parent"
-					android:layout_height="wrap_content"
-					android:layout_gravity="center"
-					android:gravity="center"
-					android:orientation="vertical">
 
 					<TextView
+						android:id="@+id/btn_account"
 						android:layout_width="wrap_content"
 						android:layout_height="wrap_content"
-						android:text="Service response:"
-						android:textColor="@color/black" />
-
-					<TextView
-						android:id="@+id/serviceReponseTv"
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:layout_margin="5dp" />
-
-				</LinearLayout>
+						android:text="btn_account"
+						android:textColor="@color/white"
+						android:textSize="20sp" />
 
 			</androidx.cardview.widget.CardView>
-
 			<androidx.cardview.widget.CardView
 				android:id="@+id/transaction_btn_cv"
 				android:layout_width="match_parent"
@@ -67,8 +111,7 @@
 				android:foreground="?android:attr/selectableItemBackground"
 				app:cardBackgroundColor="@color/purple_500"
 				app:cardCornerRadius="10dp"
-				app:cardElevation="5dp"
-				app:layout_constraintTop_toBottomOf="@id/remitente_email_cv">
+				app:cardElevation="5dp">
 
 				<LinearLayout
 					android:layout_width="match_parent"
