--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,6 +22,15 @@
 		<item name="android:textAppearance">@style/Typography.Medium</item>
 	</style>
 
+	<style name="TitleBold" parent="Widget.AppCompat.TextView">
+		<item name="android:layout_width">wrap_content</item>
+		<item name="android:layout_height">wrap_content</item>
+		<item name="android:gravity">center</item>
+		<item name="android:textSize">18dp</item>
+		<item name="android:textColor">@color/white</item>
+		<item name="android:textAppearance">@style/Typography.Bold</item>
+	</style>
+
 	<style name="AirDropSelectTitle" parent="Widget.AppCompat.TextView">
 		<item name="android:layout_width">wrap_content</item>
 		<item name="android:layout_height">wrap_content</item>
