--- a/app/src/main/res/layout/activity_near.xml
+++ b/app/src/main/res/layout/activity_near.xml
@@ -1,16 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
 
+	<data>
+
+		<variable
+			name="viewModel"
+			type="com.looktabinc.feature.wallet.NearViewModel" />
+	</data>
+
 	<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
 		xmlns:tools="http://schemas.android.com/tools"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
+		android:background="@color/gray900"
 		tools:context="com.looktabinc.feature.wallet.NearActivity">
 
 		<androidx.fragment.app.FragmentContainerView
 			android:id="@+id/demo_fragment_container"
 			android:layout_width="match_parent"
 			android:layout_height="match_parent" />
+
 
 	</androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
