--- a/app/src/main/res/layout/fragment_transaction.xml
+++ b/app/src/main/res/layout/fragment_transaction.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:tools="http://schemas.android.com/tools">
 
 	<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
 		xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -46,10 +46,18 @@
 					android:text="222usd"
 					android:textColor="@color/white"
 					android:textSize="13dp" />
-
-
 			</androidx.appcompat.widget.LinearLayoutCompat>
 
+
+			<androidx.recyclerview.widget.RecyclerView
+				android:id="@+id/rv_nft"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:layout_margin="16dp"
+				app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+				app:spanCount="2"
+				tools:itemCount="10"
+				tools:listitem="@layout/item_nft" />
 
 			<LinearLayout
 				android:layout_width="match_parent"
