--- a/app/src/main/res/layout/layout_place.xml
+++ b/app/src/main/res/layout/layout_place.xml
@@ -25,7 +25,6 @@
 					android:layout_height="wrap_content"
 					android:adjustViewBounds="true"
 					android:padding="3dp"
-
 					android:src="@drawable/img_cafe"
 					app:layout_constraintTop_toTopOf="parent" />
 
@@ -38,10 +37,13 @@
 				app:layout_constraintTop_toTopOf="@id/iv_item_cafe" />
 
 			<androidx.appcompat.widget.AppCompatTextView
-				style="@style/JoinStyleText"
+				style="@style/Typography.Regular"
+				android:layout_height="wrap_content"
 				android:layout_width="match_parent"
+				android:gravity="center"
 				android:text="@string/cafe"
-				android:textColor="@color/gray600"
+				android:textColor="@color/gray100"
+				android:textSize="16dp"
 				app:layout_constraintTop_toBottomOf="@id/iv_item_cafe" />
 		</androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -75,10 +77,13 @@
 				app:layout_constraintTop_toTopOf="@id/iv_item_restaurant" />
 
 			<androidx.appcompat.widget.AppCompatTextView
-				style="@style/JoinStyleText"
+				style="@style/Typography.Regular"
+				android:layout_height="wrap_content"
 				android:layout_width="match_parent"
+				android:gravity="center"
 				android:text="@string/restaurant"
-				android:textColor="@color/gray600"
+				android:textColor="@color/gray100"
+				android:textSize="16dp"
 				app:layout_constraintTop_toBottomOf="@id/iv_item_restaurant" />
 		</androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -112,10 +117,13 @@
 				app:layout_constraintTop_toTopOf="@id/iv_item_bar" />
 
 			<androidx.appcompat.widget.AppCompatTextView
-				style="@style/JoinStyleText"
+				style="@style/Typography.Regular"
+				android:layout_height="wrap_content"
 				android:layout_width="match_parent"
+				android:gravity="center"
 				android:text="@string/bar"
-				android:textColor="@color/gray600"
+				android:textColor="@color/gray100"
+				android:textSize="16dp"
 				app:layout_constraintTop_toBottomOf="@id/iv_item_bar" />
 		</androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -153,10 +161,13 @@
 				app:layout_constraintTop_toTopOf="@id/iv_item_shopping" />
 
 			<androidx.appcompat.widget.AppCompatTextView
-				style="@style/JoinStyleText"
+				style="@style/Typography.Regular"
+				android:layout_height="wrap_content"
 				android:layout_width="match_parent"
+				android:gravity="center"
 				android:text="@string/shopping"
-				android:textColor="@color/gray600"
+				android:textColor="@color/gray100"
+				android:textSize="16dp"
 				app:layout_constraintTop_toBottomOf="@id/iv_item_shopping" />
 		</androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -190,10 +201,13 @@
 				app:layout_constraintTop_toTopOf="@id/iv_item_cultural_life" />
 
 			<androidx.appcompat.widget.AppCompatTextView
-				style="@style/JoinStyleText"
+				style="@style/Typography.Regular"
+				android:layout_height="wrap_content"
 				android:layout_width="match_parent"
+				android:gravity="center"
 				android:text="@string/cultural_life"
-				android:textColor="@color/gray600"
+				android:textColor="@color/gray100"
+				android:textSize="16dp"
 				app:layout_constraintTop_toBottomOf="@id/iv_item_cultural_life" />
 		</androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -227,10 +241,13 @@
 				app:layout_constraintTop_toTopOf="@id/iv_item_fitness" />
 
 			<androidx.appcompat.widget.AppCompatTextView
-				style="@style/JoinStyleText"
+				style="@style/Typography.Regular"
+				android:layout_height="wrap_content"
 				android:layout_width="match_parent"
+				android:gravity="center"
 				android:text="@string/fitness"
-				android:textColor="@color/gray600"
+				android:textColor="@color/gray100"
+				android:textSize="16dp"
 				app:layout_constraintTop_toBottomOf="@id/iv_item_fitness" />
 		</androidx.constraintlayout.widget.ConstraintLayout>
 
