--- a/app/src/main/res/layout/item_nft.xml
+++ b/app/src/main/res/layout/item_nft.xml
@@ -1,6 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+	<data>
+
+		<variable
+			name="item"
+			type="com.looktabinc.feature.wallet.NftResponse" />
+
+	</data>
+
+	<androidx.constraintlayout.widget.ConstraintLayout
+		android:layout_width="162dp"
+		android:layout_height="200dp"
+		android:paddingEnd="12dp">
+
+		<ImageView
+			android:id="@+id/iv_img"
+			imageUrl="@{item.metadata.media}"
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			android:background="@color/gray500"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintTop_toTopOf="parent" />
+
+	</androidx.constraintlayout.widget.ConstraintLayout>
+
+</layout>
