--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,100 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
 
-	<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
 		xmlns:app="http://schemas.android.com/apk/res-auto"
 		xmlns:tools="http://schemas.android.com/tools"
 		android:layout_width="match_parent"
 		android:background="@color/gray900"
 		android:clickable="true"
+		android:orientation="vertical"
 		android:layout_height="match_parent">
 
-		<androidx.cardview.widget.CardView
-			android:id="@+id/user_email_cv"
+		<androidx.constraintlayout.widget.ConstraintLayout
 			android:layout_width="match_parent"
-			android:layout_height="50dp"
+			android:layout_height="60dp">
+
+			<androidx.appcompat.widget.AppCompatTextView
+				style="@style/Title"
+				android:text="Near Wallet"
+				app:layout_constraintBottom_toBottomOf="parent"
+				app:layout_constraintEnd_toEndOf="parent"
+				app:layout_constraintStart_toStartOf="parent"
+				app:layout_constraintTop_toTopOf="parent" />
+
+			<ImageView
+				android:id="@+id/btn_finsh"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_marginStart="12dp"
+				android:src="@drawable/ic_back"
+				app:layout_constraintBottom_toBottomOf="parent"
+				app:layout_constraintStart_toStartOf="parent"
+				app:layout_constraintTop_toTopOf="parent" />
+		</androidx.constraintlayout.widget.ConstraintLayout>
+
+		<androidx.appcompat.widget.AppCompatTextView
 			android:layout_marginStart="20dp"
-			android:layout_marginEnd="20dp"
-			android:clickable="true"
-			android:focusable="true"
-			android:foreground="?android:attr/selectableItemBackground"
-			app:cardCornerRadius="10dp"
-			app:cardElevation="5dp"
+			android:layout_marginTop="24dp"
+			style="@style/Typography.SemiBold"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:textColor="@color/white"
+			android:textSize="16dp"
+			android:text="USER ID"
 			app:layout_constraintBottom_toBottomOf="parent"
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintTop_toTopOf="parent"
-			tools:layout_editor_absoluteX="20dp">
+			app:layout_constraintTop_toTopOf="parent" />
 
-			<LinearLayout
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:layout_gravity="center"
-				android:gravity="center"
-				android:orientation="vertical">
-
-				<com.google.android.material.textfield.TextInputLayout
-					android:layout_width="match_parent"
-					android:layout_height="wrap_content"
-					android:layout_gravity="center"
-					android:background="@android:color/transparent"
-					app:boxStrokeWidth="0dp"
-					android:orientation="vertical"
-					app:boxStrokeWidthFocused="0dp"
-					app:hintEnabled="true">
-
-					<EditText
-						android:id="@+id/user_email_et"
-						android:layout_width="match_parent"
-						android:layout_height="wrap_content"
-						android:autofillHints="User name"
-						android:background="@android:color/transparent"
-						android:hint="User"
-						android:inputType="textWebEmailAddress"
-						android:maxLength="50"
-						android:maxLines="1"
-						android:singleLine="true" />
-
-				</com.google.android.material.textfield.TextInputLayout>
-
-
-			</LinearLayout>
-
-		</androidx.cardview.widget.CardView>
-
-		<androidx.cardview.widget.CardView
-			android:id="@+id/login_btn_cv"
+		<EditText
+			android:id="@+id/user_email_et"
 			android:layout_width="match_parent"
-			android:layout_height="50dp"
+			android:layout_height="56dp"
 			android:layout_marginStart="20dp"
-			android:layout_marginTop="20dp"
 			android:layout_marginEnd="20dp"
-			android:layout_marginBottom="20dp"
-			android:clickable="true"
-			android:focusable="true"
-			android:foreground="?android:attr/selectableItemBackground"
-			app:cardBackgroundColor="@color/purple_500"
-			app:cardCornerRadius="10dp"
-			app:cardElevation="5dp"
-			app:layout_constraintTop_toBottomOf="@id/user_email_cv">
+			android:layout_marginTop="12dp"
+			android:autofillHints="User name"
+			android:background="@drawable/box_default_line"
+			android:hint="User name ..."
+			android:textColorHint="@color/gray100"
+			style="@style/Typography.Regular"
+			android:textSize="16dp"
+			android:paddingStart="16dp"
+			android:textColor="@color/white"
+			android:maxLength="50"
+			android:maxLines="1"
+			android:singleLine="true" />
 
-			<LinearLayout
-				android:layout_width="match_parent"
-				android:layout_height="match_parent"
-				android:gravity="center"
-				android:orientation="horizontal">
+		<View
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_weight="1"/>
 
-				<TextView
-					android:id="@+id/continue_btn_tv"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:text="Login"
-					android:textColor="@color/white"
-					android:textSize="20sp" />
-			</LinearLayout>
-
-		</androidx.cardview.widget.CardView>
-
-
-	</androidx.constraintlayout.widget.ConstraintLayout>
+		<TextView
+			android:id="@+id/btn_login"
+			style="@style/Typography.Bold"
+			android:layout_width="match_parent"
+			android:layout_height="56dp"
+			android:layout_margin="20dp"
+			android:background="@drawable/bg_gradient"
+			android:gravity="center"
+			android:text="LOGIN"
+			android:textColor="@color/black"
+			android:textSize="18dp" />
+	</androidx.appcompat.widget.LinearLayoutCompat>
 </layout>
+
