wallet transaction 화면 디자인

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,9 @@
 	<color name="red">#FF4368</color>
 	<color name="blue">#3C96FF</color>
 
+	<color name="start">#79E6EE</color>
+	<color name="end">#FFFC57</color>
+
 	<color name="secondary">#DDFF91</color>
 
 	<color name="white">#FFFFFF</color>
