--- a/app/src/main/res/layout/fragment_transaction.xml
+++ b/app/src/main/res/layout/fragment_transaction.xml
@@ -3,37 +3,58 @@
 
 	<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
 		xmlns:app="http://schemas.android.com/apk/res-auto"
+		android:background="@color/gray900"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent">
 
 
-		<LinearLayout
+		<androidx.appcompat.widget.LinearLayoutCompat
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:background="@color/gray900"
+			android:clickable="true"
 			android:orientation="vertical">
+
+			<androidx.constraintlayout.widget.ConstraintLayout
+				android:layout_width="match_parent"
+				android:layout_height="60dp">
+
+				<androidx.appcompat.widget.AppCompatTextView
+					style="@style/Title"
+					android:text="Near Wallet"
+					app:layout_constraintBottom_toBottomOf="parent"
+					app:layout_constraintEnd_toEndOf="parent"
+					app:layout_constraintStart_toStartOf="parent"
+					app:layout_constraintTop_toTopOf="parent" />
+
+				<ImageView
+					android:id="@+id/btn_finsh"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_marginStart="12dp"
+					android:src="@drawable/ic_back"
+					app:layout_constraintBottom_toBottomOf="parent"
+					app:layout_constraintStart_toStartOf="parent"
+					app:layout_constraintTop_toTopOf="parent" />
+			</androidx.constraintlayout.widget.ConstraintLayout>
 
 			<androidx.appcompat.widget.LinearLayoutCompat
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
-				android:layout_marginStart="20dp"
-				android:layout_marginTop="72dp"
-				android:layout_marginEnd="20dp"
-				android:padding="20dp"
-				android:background="@drawable/box_default_round20"
+				android:background="@color/gray900"
+				android:padding="40dp"
 				android:orientation="vertical">
 
 				<androidx.appcompat.widget.AppCompatTextView
 					android:id="@+id/tv_near"
-					style="@style/Typography.Bold"
+					style="@style/Typography.ExtraBold"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:layout_gravity="center"
 					android:clickable="true"
 					android:gravity="center"
-					android:text="222 NEAR"
+					android:text="  NEAR"
 					android:textColor="@color/white"
-					android:textSize="24dp" />
+					android:textSize="32dp" />
 
 				<androidx.appcompat.widget.AppCompatTextView
 					android:id="@+id/tv_usd"
@@ -41,138 +62,28 @@
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:layout_gravity="center"
-					android:layout_marginTop="12dp"
+					android:layout_marginTop="8dp"
 					android:gravity="center"
 					android:text="222usd"
-					android:textColor="@color/white"
-					android:textSize="13dp" />
+					android:textColor="#ccc"
+					android:textSize="16dp" />
 			</androidx.appcompat.widget.LinearLayoutCompat>
 
+			<View
+				android:layout_width="match_parent"
+				android:layout_height="8dp"
+				android:background="@color/black" />
 
 			<androidx.recyclerview.widget.RecyclerView
 				android:id="@+id/rv_nft"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
-				android:layout_margin="16dp"
+				android:layout_marginStart="14dp"
+				android:layout_marginEnd="14dp"
 				app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
 				app:spanCount="2"
 				tools:itemCount="10"
 				tools:listitem="@layout/item_nft" />
-
-			<LinearLayout
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:layout_gravity="center"
-				android:gravity="center"
-				android:orientation="vertical">
-
-				<TextView
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:text="Service response:"
-					android:textColor="@color/white" />
-
-				<TextView
-					android:id="@+id/serviceReponseTv"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:textColor="@color/white"
-					android:layout_margin="5dp" />
-
-			</LinearLayout>
-
-			<androidx.cardview.widget.CardView
-				android:id="@+id/acctount_btn_cv"
-				android:layout_width="match_parent"
-				android:layout_height="50dp"
-				android:layout_marginStart="20dp"
-				android:layout_marginTop="20dp"
-				android:layout_marginEnd="20dp"
-				android:layout_marginBottom="20dp"
-				android:clickable="true"
-				android:focusable="true"
-				android:foreground="?android:attr/selectableItemBackground"
-				app:cardBackgroundColor="@color/purple_500"
-				app:cardCornerRadius="10dp"
-				app:cardElevation="5dp">
-
-
-					<TextView
-						android:id="@+id/btn_account"
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:text="btn_account"
-						android:textColor="@color/white"
-						android:textSize="20sp" />
-
-			</androidx.cardview.widget.CardView>
-			<androidx.cardview.widget.CardView
-				android:id="@+id/transaction_btn_cv"
-				android:layout_width="match_parent"
-				android:layout_height="50dp"
-				android:layout_marginStart="20dp"
-				android:layout_marginTop="20dp"
-				android:layout_marginEnd="20dp"
-				android:layout_marginBottom="20dp"
-				android:clickable="true"
-				android:focusable="true"
-				android:foreground="?android:attr/selectableItemBackground"
-				app:cardBackgroundColor="@color/purple_500"
-				app:cardCornerRadius="10dp"
-				app:cardElevation="5dp">
-
-				<LinearLayout
-					android:layout_width="match_parent"
-					android:layout_height="match_parent"
-					android:gravity="center"
-					android:orientation="horizontal">
-
-					<TextView
-						android:id="@+id/transaction_tv"
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:text="Transaction"
-						android:textColor="@color/white"
-						android:textSize="20sp" />
-
-				</LinearLayout>
-
-			</androidx.cardview.widget.CardView>
-
-			<androidx.cardview.widget.CardView
-				android:id="@+id/call_function_btn_cv"
-				android:layout_width="match_parent"
-				android:layout_height="50dp"
-				android:layout_marginStart="20dp"
-				android:layout_marginTop="20dp"
-				android:layout_marginEnd="20dp"
-				android:layout_marginBottom="20dp"
-				android:clickable="true"
-				android:focusable="true"
-				android:foreground="?android:attr/selectableItemBackground"
-				app:cardBackgroundColor="@color/purple_500"
-				app:cardCornerRadius="10dp"
-				app:cardElevation="5dp"
-				app:layout_constraintTop_toBottomOf="@id/transaction_btn_cv">
-
-				<LinearLayout
-					android:layout_width="match_parent"
-					android:layout_height="match_parent"
-					android:gravity="center"
-					android:orientation="horizontal">
-
-					<TextView
-						android:id="@+id/call_function_btn_tv"
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:text="Call function"
-						android:textColor="@color/white"
-						android:textSize="20sp" />
-
-				</LinearLayout>
-
-			</androidx.cardview.widget.CardView>
-
 
 			<ProgressBar
 				android:id="@+id/tx_progress"
@@ -181,7 +92,6 @@
 				android:layout_gravity="center"
 				android:visibility="gone" />
 
-		</LinearLayout>
-
+		</androidx.appcompat.widget.LinearLayoutCompat>
 	</ScrollView>
 </layout>
