--- a/app/src/main/res/layout/item_nft.xml
+++ b/app/src/main/res/layout/item_nft.xml
@@ -11,18 +11,40 @@
 	</data>
 
 	<androidx.constraintlayout.widget.ConstraintLayout
-		android:layout_width="162dp"
-		android:layout_height="200dp"
-		android:paddingEnd="12dp">
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:layout_marginStart="6dp"
+		android:layout_marginTop="20dp"
+		android:layout_marginEnd="6dp">
 
 		<ImageView
-			android:id="@+id/iv_img"
+			android:id="@+id/gridImg"
 			imageUrl="@{item.metadata.media}"
-			android:layout_width="match_parent"
-			android:layout_height="match_parent"
-			android:background="@color/gray500"
+			android:layout_width="0dp"
+			android:layout_height="0dp"
+			android:padding="1dp"
+			android:background="@drawable/box_default_line"
+			android:adjustViewBounds="true"
+			android:scaleType="centerCrop"
+			app:layout_constraintDimensionRatio="1:1"
+			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintStart_toStartOf="parent"
 			app:layout_constraintTop_toTopOf="parent" />
+
+		<androidx.appcompat.widget.AppCompatTextView
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_marginTop="8dp"
+			android:ellipsize="end"
+			android:ems="15"
+			android:maxLength="15"
+			android:maxLines="1"
+			android:text="@{item.metadata.title}"
+			android:textColor="@color/white"
+			android:textSize="14dp"
+			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintTop_toBottomOf="@id/gridImg" />
 
 	</androidx.constraintlayout.widget.ConstraintLayout>
 
